# ferrishost

./: Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: build-web.yml  ci.yml  release-plz.yml
charts/ferrishost-web/: Chart.yaml  values.yaml
charts/ferrishost-web/templates/: deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
ferrishost-cli/: Cargo.toml
ferrishost-cli/src/: deploy_web.rs  k3s.rs  lib.rs  main.rs  operators.rs  system.rs
ferrishost-cli/src/gpu/: amd.rs  mod.rs  nvidia.rs
ferrishost-cli/tests/: integration_test.rs
ferrishost-cli/tests/testdata/: malformed-nvidia-smi.csv  sample-nvidia-smi.csv
ferrishost-core/: Cargo.toml
ferrishost-core/src/: lib.rs
ferrishost-core/tests/: integration_test.rs
ferrishost-web/: Cargo.toml  Dockerfile
ferrishost-web/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
ferrishost-web/frontend/src/: App.tsx  index.tsx
ferrishost-web/frontend/src/components/: CategoryFilter.tsx  InstallButton.tsx  JobStatus.tsx  ModuleCard.tsx  SearchBar.tsx
ferrishost-web/frontend/src/lib/: api.ts  types.ts
ferrishost-web/frontend/src/pages/: InstalledPage.tsx  ModuleDetail.tsx  SetupPage.tsx  StorePage.tsx
ferrishost-web/src/: k8s.rs  lib.rs  main.rs  state.rs
ferrishost-web/src/routes/: mod.rs  modules.rs  setup.rs  status.rs
ferrishost-web/tests/: integration_test.rs
manifests/: amd-device-plugin.yaml  cert-manager.yaml  ferrishost-core-rbac.yaml  ferrishost-web.yaml  nvidia-device-plugin.yaml
web/: index.html
