[package]
name = "ferrishost-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrishost-core = { path = "../ferrishost-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
